syntax = "proto3";
package pb;

enum ErrorCode {
    SUCCESS  = 0;
    CLIENT_ERROR = 499;
    SERVER_ERROR = 500;
}

message UnRequest {
    string app_name = 1;
}

message UnResponse{
    ErrorCode error_code  = 1;
    string error_msg = 2;
    string seq = 3;
}

service UnService {
    rpc GetUniqueNumber (UnRequest) returns (UnResponse) {}
}
